Animations added. More on transform property.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="uft-8">
         <title>X-Course | courses</title>
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     </head>
@@ -10,10 +11,10 @@
     <nav>
         <img class="nav-pic" src="img/cancel.png" alt="Navigation Picture"/>
         <ul>
-            <li class="nav-item"><a class="white-text" href="#tutors"><strong>Tutors</strong></a></li>
-            <li class="nav-item"><a class="white-text" href="#goodToKnow"><strong>Info</strong></a></li>
-            <li class="nav-item"><a class="white-text" href="#courses"><strong>Courses</strong></a></li>
-            <li class="nav-item"><a class="white-text" href="#schedule"><strong>Schedule</strong></a></li>
+            <li class="nav-item"><a class="li-style" href="#tutors"><strong>Tutors</strong></a></li>
+            <li class="nav-item"><a class="li-style" href="#goodToKnow"><strong>Info</strong></a></li>
+            <li class="nav-item"><a class="li-style" href="#courses"><strong>Courses</strong></a></li>
+            <li class="nav-item"><a class="li-style" href="#schedule"><strong>Schedule</strong></a></li>
         </ul>
         
         <div class="container">
