--- a/registration.html
+++ b/registration.html
@@ -17,35 +17,39 @@
     </nav>
 
     <body>
-        <form class="signup-form container">
+        <form class="signup-form mx-auto ">
             <div id="genderPicture">
                 <img id="maleOrFemale" class="tutor-pic" src="img/boy.png" alt="A picture based from gender">
             </div>
             <br/><br/>
             <div class="container form-group row">
                 <label for="inputEmail" class="col-form-label col-sm-2">Email</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="Enter Email">
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Enter Email">
+                </div>
             </div>
             <div class="container form-group row">
                 <label for="inputPassword" class="col-form-label col-sm-2">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Enter Password">
-            </div>
-            <fieldset class="container form-group">
-                <div class="row" id="genderForm">
-                <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="male" checked>
-                        <label id="gender-male" value="male" class="form-check-label col-sm-2" for="gridRadios1">Male</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="female">
-                        <label id="gender-female" value="female" class="form-check-label col-sm-2" for="gridRadios2">Female</label>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary" id="sign-in">Sign in</button>
-                    </div>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                 </div>
-            </fieldset>
+            </div>
+            <div class="row container form-group" id="genderForm">
+            <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="male" checked>
+                    <label id="gender-male" value="male" class="form-check-label col-sm-2" for="gridRadios1">Male</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="female">
+                    <label id="gender-female" value="female" class="form-check-label col-sm-2" for="gridRadios2">Female</label>
+                </div>
+            </div>
+
+            <div class="row form-group form-gender col-sm-12 mx-auto">
+                <button type="submit" class="btn btn-primary" id="sign-in">Sign in</button>
+            </div>
+
             </form>
 
             <div class="container text-center main-heading">
